# anime4you-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: anime4you.rs  cookie.rs  main.rs  series.rs
src/downloader/: gounlimited.rs  mod.rs  streamtape.rs  vidoza.rs  vivo.rs
