[package]
name = "anime4you-dl"
version = "0.1.0"
authors = ["niniib <ninib0@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
image = "0.23.3"
colored = "1.9.3"
regex = "1.3.5"
serde_json = "1.0.48"
anyhow = "1.0.27"
clap = "2.33.0"
rand = "0.7.3"
urlencoding = "1.0.0"