[package]
name = "anime4you-dl"
version = "0.1.0"
authors = ["niniib <ninib0@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.24"
image = { version = "0.23.3", default-features = false, features = ["png"] }
colored = "1.9.3"
regex = "1.3.6"
serde_json = "1.0.51"
anyhow = "1.0.28"
clap = "2.33.0"
urlencoding = "1.0.0"