[package]
name = "anime4you-dl"
version = "1.0.3"
authors = ["niniib <ninib0@protonmail.com>", "fludixx <fludixs@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
clap = { version = "2.33.3", features = ["color", "suggestions"] }
colorful = "0.2.1"
dssim-core = "2.11.4"
imgref = "1.7.1"
lodepng = "3.2.2"
urlencoding = "1.1.1"
rand = "0.8.1"
regex = "1.4.2"
reqwest = { version = "0.11.0", default-features = false, features = ["cookies", "json", "multipart", "blocking"] }
rustbreak = { version = "2", features = ["bin_enc"] }
serde_json = "1.0.61"
tokio = { version = "1", features = ["full"] }

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]